--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ build/Release
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules
+
+# wip/ and dist/ folders generated with grunt
+wip
+dist
+
+# Ignore client/ assets folder
+assets/client/**
