--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "description": "Content and ROI Email Marketing Campaign",
   "devDependencies": {
-    "grunt": "~0.4.4"
+    "grunt": "~0.4.4",
+    "assemble": "~0.4.37",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-browser-sync": "~0.8.2"
   },
   "main": "app.js",
   "scripts": {
