--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "assemble": "~0.4.37",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-browser-sync": "~0.8.2"
+    "grunt-browser-sync": "~0.8.2",
+    "grunt-contrib-watch": "~0.6.1"
   },
   "main": "app.js",
   "scripts": {
