--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-browser-sync": "~0.8.2",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-text-replace": "~0.3.12"
   },
   "main": "app.js",
   "scripts": {
