--- a/package.json
+++ b/package.json
@@ -1,29 +1,21 @@
 {
-  "name": "14YEL45268",
+  "name": "assemble-template",
   "version": "0.0.0",
-  "description": "Content and ROI Email Marketing Campaign",
-  "devDependencies": {
-    "grunt": "~0.4.4",
-    "assemble": "~0.4.37",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-browser-sync": "~0.8.2",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-text-replace": "~0.3.12"
-  },
-  "main": "app.js",
+  "description": "Boilerplate Assemble Template to generate static HTML pages",
+  "main": "index.js",
   "scripts": {
     "test": "test"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://thetanman@bitbucket.org/thetanman/14yel45268.git"
-  },
   "keywords": [
-    "Content",
-    "ROI",
-    "YellowPages"
+    "assemble", "template", "html", "static"
   ],
   "author": "Tan Vo",
-  "license": "MIT"
+  "license": "ISC",
+  "devDependencies": {
+    "assemble": "~0.4.37",
+    "grunt": "~0.4.5",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-connect": "~0.8.0"
+  }
 }
