--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "test"
   },
   "keywords": [
-    "assemble", "template", "html", "static"
+    "assemble",
+    "template",
+    "html",
+    "static"
   ],
   "author": "Tan Vo",
   "license": "ISC",
@@ -16,6 +19,8 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-connect": "~0.8.0"
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-text-replace": "~0.3.11",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
