--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-connect": "~0.8.0",
     "grunt-text-replace": "~0.3.11",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-less": "~0.11.3"
   }
 }
